--- a/ch03/끝말잇기1.html
+++ b/ch03/끝말잇기1.html
@@ -8,24 +8,53 @@
 </head>
 <body>
   <div>1<span id="order">번째 참가자</span></div>
-  <div>제시어<span id="word"></span></div>
+  <div>제시어: <span id="word"></span></div>
   <input type="text">
   <button>입력</button>
+  
+  <div>
+    <p>abc
+      <span>def</span>
+    </p>
+  </div>
+
   <script>
     const nOfPlayer = Number(prompt('몇 명이 참가하나요?'));
     const $input = document.querySelector('input');
     const $button = document.querySelector('button');
-    let word;
+    const $word = document.querySelector('#word'); // span 태그 엘리먼트 선택
+
+    let jesiWord; // 초기값 : undefined
+    let inputtedWord; // 게임 참가자가 입력한 단어 저장
 
     $button.addEventListener( // 이벤트의 등록만 했음
     'click',
-    (event) => { console.log("버튼누름2");}
+    (event) => { 
+      // console.log("버튼누름2");
+      if(!jesiWord){ // 최초 실행시 !undefined, 제시어가 비어있다.
+        // 제시어가 비어있으니 입력한 단어를 제시어로 저장한 후 화면에 표시
+        jesiWord = inputtedWord; // 입력한 단어를 제시어로 저장
+        $word.textContent = jesiWord; 
+      }else{ // 제시어가 비어 있지 않다
+        // 입력한 단어가 올바른지 구현
+        if(jesiWord[jesiWord.length-1] === inputtedWord[0]){
+          // 입력받은 단어가 올바른 경우
+          alert('올바름');
+
+          jesiWord = inputtedWord; // 입력한 단어를 제시어로 저장
+          $word.textContent = jesiWord; 
+        }else{
+          // 입력 단어가 올바르지 않음
+          alert('틀림');
+        }
+      }
+    }
     );
     $input.addEventListener(
       'input',
       (event) => {
-        console.log('이벤트가 발생한 글자 ', event.target);
         console.log('입력한 글자 ', event.target.value);
+        inputtedWord = event.target.value;
       }
     );
   </script>
